--- a/package.json
+++ b/package.json
@@ -2,63 +2,64 @@
   "name": "react-modele",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
+    "update": "pnpm update || yarn upgrade || npm update",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "deploy": "surge ./dist/ blockchain-apotheose.surge.sh",
+    "deploy": "surge ./build/ blockchain-apotheose.surge.sh",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint --fix src/**/*.js",
-    "clean": "rm -rf dist",
-    "clean:all": "rm -rf dist node_modules yarn.lock package-lock.json"
+    "clean": "rd /s /q build 2> nul || rm -rf build",
+    "clean:all": "rd /s /q build node_modules 2> nul || rm -rf build node_modules"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "bundle-stats-webpack-plugin": "^2.5.0",
+    "babel-loader": "^8.3.0",
+    "bundle-stats-webpack-plugin": "^2.8.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
-    "core-js": "3",
+    "core-js": "^3.35.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.18.0",
+    "css-loader": "^5.2.7",
+    "cssnano": "^4.1.11",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0-alpha.14",
-    "mini-css-extract-plugin": "^1.3.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^4.1.0",
-    "postcss-preset-env": "^6.7.0",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.4",
-    "sass-loader": "^10.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.8",
+    "postcss-loader": "^4.3.0",
+    "postcss-preset-env": "^6.7.2",
+    "resolve-url-loader": "^3.1.5",
+    "sass": "^1.69.7",
+    "sass-loader": "^10.5.2",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "i18next": "^19.9.1",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^0.0.0-experimental-ee4326357",
-    "react-dom": "^0.0.0-experimental-ee4326357",
-    "react-i18next": "^11.8.9",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "scheduler": "^0.20.1",
+    "axios": "^0.21.4",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "prop-types": "^15.8.1",
+    "react": "0.0.0-fec00a869",
+    "react-dom": "0.0.0-fec00a869",
+    "react-i18next": "^11.18.6",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
+    "redux": "^4.2.1",
+    "scheduler": "^0.20.2",
     "three": "^0.126.1",
     "zxcvbn": "^4.4.2"
   }
